// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkmapWidget > drops labels before squeezing titles on narrow widths (snapshot) 1`] = `
"✦ Stop random logouts
Workmap · 6 signals ·[0m...[0m
⎇  Implementation is [0m...[0m
◆  Use session-global[0m...[0m
└─ ◎  Render the pers[0m...[0m
•  Tree navigation mu[0m...[0m
◆  Which labels stay [0m...[0m"
`;

exports[`WorkmapWidget > keeps labels right-aligned when there is room (snapshot) 1`] = `
"✦ Stop random logouts                              long-term
Workmap · 6 signals · 1 drift
⎇  Implementation is becoming a todo manager        detected
◆  Use session-global snapshots                       chosen
└─ ◎  Render the persistent widget                    active
•  Tree navigation must not roll back the map
◆  Which labels stay readable on narrow term[0m...[0m  considering"
`;

exports[`WorkmapWidget > renders past the former compact budget without hidden counts (snapshot) 1`] = `
"✦ Stop random logouts                                                long-term
Workmap · 9 signals · 1 drift
⎇  Implementation is becoming a todo manager                          detected
◆  Use session-global snapshots                                         chosen
└─ ◎  Render the persistent widget                                      active
•  Tree navigation must not roll back the map
◆  Which labels stay readable on narrow terminals?                 considering
◎  Extra task one
◎  Extra task two
◎  Extra task three"
`;

exports[`WorkmapWidget > renders the goal header above the full tree at standard width (snapshot) 1`] = `
"✦ Stop random logouts                                                long-term
Workmap · 6 signals · 1 drift
⎇  Implementation is becoming a todo manager                          detected
◆  Use session-global snapshots                                         chosen
└─ ◎  Render the persistent widget                                      active
•  Tree navigation must not roll back the map
◆  Which labels stay readable on narrow terminals?                 considering"
`;

exports[`WorkmapWidget > renders without the header when no goal is set (snapshot) 1`] = `
"Workmap · 5 signals · 1 drift
⎇  Implementation is becoming a todo manager                          detected
◆  Use session-global snapshots                                         chosen
└─ ◎  Render the persistent widget                                      active
•  Tree navigation must not roll back the map
◆  Which labels stay readable on narrow terminals?                 considering"
`;
